--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.1.0
   cloud_firestore: ^4.0.3
   google_fonts: ^3.0.1
+  lottie: ^1.4.3
 
 dev_dependencies:
   flutter_test:
